Fixed OverflowX Bug in Hero Section

--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -22,7 +22,7 @@
   filter: drop-shadow(0px 0px 90px rgba(98, 0, 255, 0.9));
 }
 .img-2 {
-  translate: 10px 0px;
+  translate: 0px 0px;
   width: 27rem;
   filter: drop-shadow(0px 0px 90px rgb(238, 0, 255));
 }
