--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,9 @@
   font-family: "Open Sans", sans-serif; 
   line-height: 1.5;
   font-weight: 400;
-
+  padding: 0%;
+  margin: 0;
+  box-sizing: border-box;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #171923;
